[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/Player/MainCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Player/States/OnGround/Idle.gd" type="Script" id=2]
[ext_resource path="res://src/Player/States/Hit.gd" type="Script" id=3]
[ext_resource path="res://src/Player/States/InAir/DoubleJump.gd" type="Script" id=4]
[ext_resource path="res://src/Player/States/InAir/WallJump.gd" type="Script" id=5]
[ext_resource path="res://src/Player/States/Appear.gd" type="Script" id=6]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=7]
[ext_resource path="res://src/Player/States/OnGround/Run.gd" type="Script" id=8]
[ext_resource path="res://src/StateMachine/StateMachine.gd" type="Script" id=9]
[ext_resource path="res://src/Player/States/InAir/Fall.gd" type="Script" id=10]
[ext_resource path="res://src/Player/States/InAir/Jump.gd" type="Script" id=11]
[ext_resource path="res://assets/SFX/Teleport1__004.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/SFX/Hits/hit12.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/SFX/Jump.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/SFX/Jump4.wav" type="AudioStream" id=15]
[ext_resource path="res://src/Player/States/Disappear.gd" type="Script" id=16]

[node name="Player" groups=[
"player",
] instance=ExtResource( 1 )]
z_index = 1
script = ExtResource( 7 )

[node name="CollisionShape2D" parent="." index="0"]
disabled = false

[node name="RayCast2D" type="RayCast2D" parent="." index="1"]
position = Vector2( -4, 4 )
cast_to = Vector2( 4, 0 )

[node name="Sprite" parent="." index="2"]
frame = 31

[node name="AnimatedSprite" parent="." index="4"]
z_index = 1

[node name="StateMachine" type="Node" parent="." index="5"]
script = ExtResource( 9 )
initial_state = NodePath("Idle")

[node name="Appear" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 6 )

[node name="Audio" type="AudioStreamPlayer" parent="StateMachine/Appear" index="0"]
stream = ExtResource( 12 )
volume_db = -15.0

[node name="Disappear" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 16 )

[node name="Idle" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 2 )

[node name="Run" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="StateMachine/Run" index="0"]
wait_time = 0.3

[node name="Audio" type="AudioStreamPlayer" parent="StateMachine/Run" index="1"]

[node name="Jump" type="Node" parent="StateMachine" index="4"]
script = ExtResource( 11 )

[node name="Audio" type="AudioStreamPlayer" parent="StateMachine/Jump" index="0"]
stream = ExtResource( 14 )

[node name="Fall" type="Node" parent="StateMachine" index="5"]
script = ExtResource( 10 )

[node name="DoubleJump" type="Node" parent="StateMachine" index="6"]
script = ExtResource( 4 )

[node name="Audio" type="AudioStreamPlayer" parent="StateMachine/DoubleJump" index="0"]
stream = ExtResource( 15 )

[node name="WallJump" type="Node" parent="StateMachine" index="7"]
script = ExtResource( 5 )

[node name="Hit" type="Node" parent="StateMachine" index="8"]
script = ExtResource( 3 )

[node name="Punch" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource( 13 )
volume_db = -20.0

[node name="Label" type="Label" parent="." index="7"]
margin_left = -24.0
margin_top = -32.0
margin_right = 31.0
margin_bottom = -18.0
text = "State"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="StateMachine/Run/Timer" to="StateMachine/Run" method="_on_Timer_timeout"]
[connection signal="finished" from="StateMachine/Run/Audio" to="StateMachine/Run" method="_on_Audio_finished"]
